--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -1,22 +1,81 @@
+.body{
+}
 .body-1{
     display: flex;
     width: 100%;
-    height: 15vh;
+    height: 8vh;
+    background-color: rgba(0, 0, 255, 0.8);
+    margin: 0;
+    padding: 0;
 }
 .body-logo-1 img{
-    width: 140px;
-    margin-left: 500px;
+    width: 100px;
+    margin-left: 10px;
+    margin-top: -10px;
 }
 .body-title-1{
-    margin-top: 30px;
-    font-size: 30px;
+    margin-top: 10px;
+    width: 55vh;
 }
 .body-title-1-1{
     font-weight: bold;
-    color: blue;
-    margin-left: 60px;
+    color: #ffffff;
+    margin-left: 10px;
+    font-size: 30px;
 }
 .body-title-1-2{
-    font-weight: bold;
-    color: blue;
+    color: #ffffff;
+    font-size: 20px;
+    margin-left: 40px;
+}
+.avatar-1 img{
+    margin-top: 10px;
+    width: 60px;
+    height: 60px;
+    border-radius: 360px;
+    margin-left: 900px;
+}
+.username{
+    color: white;
+    margin-top: 25px;
+    font-size: 20px;
+    margin-left: 10px;
+}
+.body-2{
+    background-color: rgba(0, 0, 255, 0.82);
+    margin-top: 10px;
+    width: 100%;
+    height: 0.5vh;
+}
+.body-3{
+    padding: 15px 15px 100px 15px;
+    display: flex;
+
+}
+.body-3-1{
+    width: 200px;
+    height: 75vh;
+    background-color: brown;
+}
+.body-3-2 {
+    height: 75vh;
+    width: 500px;
+    background-color: chocolate;
+}
+.body-3-3{
+    height: 75vh;
+    width: 950px;
+    background-color: #1e2dd2;
+}
+.body-3-4{
+    width: 200px;
+    height: 75vh;
+    background-color: brown;
+}
+.body-3-2-1{
+    border: 4px solid darkblue;
+    width: 460px;
+    height: 70vh;
+    margin: 20px;
+    border-radius: 30px;
 }
