--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -5,77 +5,105 @@
     width: 100%;
     height: 8vh;
     background-color: rgba(0, 0, 255, 0.8);
-    margin: 0;
-    padding: 0;
+    padding: 0.2vh;
 }
 .body-logo-1 img{
-    width: 100px;
-    margin-left: 10px;
-    margin-top: -10px;
+    width: 9vh;
+    border: 1px solid;
+    height: 100%;
 }
 .body-title-1{
-    margin-top: 10px;
-    width: 55vh;
+    width: 70vh;
+    border: 1px solid;
+    height: 100%;
+    text-align: left;
 }
 .body-title-1-1{
     font-weight: bold;
     color: #ffffff;
-    margin-left: 10px;
-    font-size: 30px;
+    margin-left: 2vh;
+    font-size: 2.5vh;
+
 }
 .body-title-1-2{
     color: #ffffff;
-    font-size: 20px;
-    margin-left: 40px;
+    font-size: 2vh;
+    margin-left: 1vh;
+}
+.nothing-1{
+    width: 87vh;
+    border: 1px solid;
+    height: 100%;
+}
+.body-user-ava{
+    width: 47vh;
+    display: flex;
+    border: 1px solid;
+    height: 100%;
 }
 .avatar-1 img{
-    margin-top: 10px;
-    width: 60px;
-    height: 60px;
+    margin-left: 1vh;
+    margin-top: 1vh;
+    width: 6vh;
+    height: 6vh;
     border-radius: 360px;
-    margin-left: 900px;
 }
 .username{
     color: white;
-    margin-top: 25px;
-    font-size: 20px;
-    margin-left: 10px;
+    margin-top: 2.5vh;
+    font-size: 2.5vh;
+    margin-left: 1vh;
 }
 .body-2{
     background-color: rgba(0, 0, 255, 0.82);
-    margin-top: 10px;
+    margin-top: 1vh;
     width: 100%;
-    height: 0.5vh;
+    height: 0.3vh;
 }
 .body-3{
-    padding: 15px 15px 100px 15px;
+    padding: 2vh 2vh 10vh 2vh;
     display: flex;
 
 }
 .body-3-1{
-    width: 200px;
+    width: 20vh;
     height: 75vh;
-    background-color: brown;
 }
 .body-3-2 {
     height: 75vh;
-    width: 500px;
+    width: 55vh;
     background-color: chocolate;
 }
 .body-3-3{
     height: 75vh;
-    width: 950px;
+    width: 120vh;
     background-color: #1e2dd2;
 }
 .body-3-4{
-    width: 200px;
+    width: 20vh;
     height: 75vh;
-    background-color: brown;
+
 }
 .body-3-2-1{
-    border: 4px solid darkblue;
-    width: 460px;
-    height: 70vh;
-    margin: 20px;
-    border-radius: 30px;
+    border: 1vh solid darkblue;
+    width: 48vh;
+    height: 69vh;
+    margin: 2vh;
+    border-radius: 5vh;
+}
+.notice-1{
+    margin: 1vh 1vh 1vh 1vh;
+    border: 1px solid;
+    border-radius: 3vh;
+}
+.notice-1-1 img{
+    width: 44vh;
+    height: 22.5vh;
+    border: 2px solid;
+    border-radius: 3vh;
+    margin: 1vh 1vh 1vh 0.8vh;
+}
+.notice-1-2{
+    text-align: center;
+    margin: 1vh 1vh 1vh 1vh;
 }
