--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -8,37 +8,31 @@
     padding: 0.2vh;
 }
 .body-logo-1 img{
-    width: 9vh;
-    border: 1px solid;
+    width: 8vh;
     height: 100%;
 }
 .body-title-1{
-    width: 70vh;
-    border: 1px solid;
+    width: 125vh;
     height: 100%;
     text-align: left;
 }
 .body-title-1-1{
+    margin-top: 0.5vh;
     font-weight: bold;
     color: #ffffff;
-    margin-left: 2vh;
+    margin-left: 4vh;
     font-size: 2.5vh;
-
+    height: 3vh;
 }
 .body-title-1-2{
     color: #ffffff;
     font-size: 2vh;
     margin-left: 1vh;
-}
-.nothing-1{
-    width: 87vh;
-    border: 1px solid;
-    height: 100%;
+    height: 2.5vh;
 }
 .body-user-ava{
-    width: 47vh;
+    width: 52vh;
     display: flex;
-    border: 1px solid;
     height: 100%;
 }
 .avatar-1 img{
@@ -50,7 +44,7 @@
 }
 .username{
     color: white;
-    margin-top: 2.5vh;
+    margin-top: 2vh;
     font-size: 2.5vh;
     margin-left: 1vh;
 }
@@ -71,39 +65,120 @@
 }
 .body-3-2 {
     height: 75vh;
-    width: 55vh;
-    background-color: chocolate;
+    width: 50vh;
 }
-.body-3-3{
-    height: 75vh;
-    width: 120vh;
-    background-color: #1e2dd2;
-}
+
 .body-3-4{
     width: 20vh;
     height: 75vh;
-
 }
 .body-3-2-1{
     border: 1vh solid darkblue;
     width: 48vh;
     height: 69vh;
-    margin: 2vh;
+    margin: 1vh;
     border-radius: 5vh;
+}
+.notice{
+    width: 44vh;
+    height: 2.6vh;
+    margin: 0.5vh 1vh 1vh 1vh;
+    border-radius: 1vh;
+}
+.notice-0-1{
+    font-size: 2vh;
+    color: darkblue;
+    font-weight: bold;
+    text-align: center;
+    width: 44vh;
+    height: 2.5vh;
+    border-radius: 1vh;
+}
+.notice-0-2{
+    border: 1px solid;
+    background-color: darkblue;
+    width: 44vh;
+    height: 0.1vh;
 }
 .notice-1{
     margin: 1vh 1vh 1vh 1vh;
-    border: 1px solid;
+    border: 2px solid;
     border-radius: 3vh;
+    color: darkblue;
+    width: 44vh;
+    height: 30.5vh;
 }
 .notice-1-1 img{
-    width: 44vh;
+    width: 42vh;
     height: 22.5vh;
     border: 2px solid;
     border-radius: 3vh;
     margin: 1vh 1vh 1vh 0.8vh;
 }
 .notice-1-2{
-    text-align: center;
-    margin: 1vh 1vh 1vh 1vh;
+    text-align: left;
+    margin: 0.5vh 0.5vh 0.5vh 0.5vh;
+    text-decoration-line: underline;
+    font-weight: bold;
+    font-size: 1.7vh;
+    width: 42.5vh;
+    height: 4vh;
+}
+.body-3-3{
+    height: 75vh;
+    width: 86vh;
+}
+.body-3-3-1{
+    height: 25vh;
+    width: 86vh;
+}
+.body-3-3-2{
+    height: 50vh;
+    width: 86vh;
+    display: flex;
+}
+.body-3-3-1 img{
+    height: 25vh;
+    width: 85vh;
+    border-radius: 1.5vh;
+}
+.body-3-0{
+    width: 43vh;
+    height: 50vh;
+    padding: 4vh 1.5vh 4vh 1vh ;
+}
+.body-3-0-1{
+    width: 43vh;
+    height: 50vh;
+    padding: 4vh 1.5vh 4vh 1vh ;
+}
+.body-title-3-3-2-1{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
+}
+.body-title-3-3-2-2{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
+}
+.body-title-3-3-2-3{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
+}
+.body-title-3-3-2-4{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
+}
+.body-title-3-3-2-5{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
+}
+.body-title-3-3-2-6{
+    width: 35vh;
+    height: 10vh;
+    margin: 3vh 3vh 3vh 3vh;
 }
