--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -7,20 +7,24 @@
     background-color: rgba(0, 0, 255, 0.8);
     padding: 0.2vh;
 }
+.body-logo-1{
+    width: 4%;
+    height: 100%;
+}
 .body-logo-1 img{
-    width: 8vh;
+    width: 100%;
     height: 100%;
 }
 .body-title-1{
-    width: 125vh;
+    width: 65%;
     height: 100%;
     text-align: left;
 }
 .body-title-1-1{
-    margin-top: 0.5vh;
+    margin-top: 1vh;
     font-weight: bold;
     color: #ffffff;
-    margin-left: 4vh;
+    margin-left: 2vh;
     font-size: 2.5vh;
     height: 3vh;
 }
@@ -31,7 +35,7 @@
     height: 2.5vh;
 }
 .body-user-ava{
-    width: 52vh;
+    width: 31%;
     display: flex;
     height: 100%;
 }
@@ -60,16 +64,19 @@
 
 }
 .body-3-1{
-    width: 20vh;
+    width: 10%;
     height: 75vh;
+    border: 1px solid;
 }
 .body-3-2 {
     height: 75vh;
-    width: 50vh;
+    width: 25%;
+    border: 1px solid;
 }
 
 .body-3-4{
-    width: 20vh;
+    border: 1px solid;
+    width: 10%;
     height: 75vh;
 }
 .body-3-2-1{
@@ -126,7 +133,8 @@
 }
 .body-3-3{
     height: 75vh;
-    width: 86vh;
+    width: 55%;
+    border: 1px solid;
 }
 .body-3-3-1{
     height: 30vh;
