--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -61,62 +61,64 @@
 .body-3{
     padding: 2vh 2vh 10vh 2vh;
     display: flex;
-
 }
 .body-3-1{
     width: 10%;
     height: 75vh;
-    border: 1px solid;
 }
 .body-3-2 {
     height: 75vh;
     width: 25%;
-    border: 1px solid;
 }
 
 .body-3-4{
-    border: 1px solid;
     width: 10%;
     height: 75vh;
 }
 .body-3-2-1{
     border: 1vh solid darkblue;
-    width: 48vh;
+    width: 100%;
     height: 69vh;
-    margin: 1vh;
     border-radius: 5vh;
 }
 .notice{
-    width: 44vh;
+    width: 95%;
     height: 2.6vh;
-    margin: 0.5vh 1vh 1vh 1vh;
-    border-radius: 1vh;
+
 }
 .notice-0-1{
     font-size: 2vh;
     color: darkblue;
     font-weight: bold;
     text-align: center;
-    width: 44vh;
+    width: 95%;
     height: 2.5vh;
     border-radius: 1vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 .notice-0-2{
     border: 1px solid;
     background-color: darkblue;
-    width: 44vh;
+    width: 95%;
     height: 0.1vh;
+    margin-right: auto;
+    margin-left: auto;
 }
 .notice-1{
     margin: 1vh 1vh 1vh 1vh;
     border: 2px solid;
     border-radius: 3vh;
     color: darkblue;
-    width: 44vh;
+    width: 95%;
     height: 30.5vh;
 }
+.notice-1-1 {
+    width: 96%;
+    height: 22.5vh;
+}
 .notice-1-1 img{
-    width: 42vh;
+    width: 100%;
     height: 22.5vh;
     border: 2px solid;
     border-radius: 3vh;
@@ -128,23 +130,26 @@
     text-decoration-line: underline;
     font-weight: bold;
     font-size: 1.7vh;
-    width: 42.5vh;
+    width: 98%;
     height: 4vh;
 }
 .body-3-3{
     height: 75vh;
     width: 55%;
-    border: 1px solid;
 }
 .body-3-3-1{
-    height: 30vh;
-    width: 86vh;
+    height: 40%;
+    width: 90%;
     padding: 1vh 0.5vh 1vh 0.5vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 .body-3-3-2{
-    height: 45vh;
-    width: 86vh;
+    height: 60%;
+    width: 90%;
     display: flex;
+    margin-right: auto;
+    margin-left: auto;
 }
 .body-3-3-1 img{
     height: 25vh;
