--- a/trang3/trang3.css
+++ b/trang3/trang3.css
@@ -152,7 +152,7 @@
     font-weight: bold;
     text-align: center;
     margin: 3.7vh 1vh 3.7vh 1vh;
-    font-size: 1.7vh;
+    font-size: 1.6vh;
     color: #ffffff;
 }
 .qlct-6{
@@ -404,7 +404,7 @@
     width: 100%;
     height: 50%;
     border-bottom: 2px solid;
-    font-family: Helvetica, serif;
+    font-family: Arial, serif;
     -webkit-font-smoothing: antialiased;
 }
 .content-1-1 h2{
@@ -495,7 +495,7 @@
     }
     .content-1-a thead th {
         text-align: left;
-        border-bottom: 1px solid #f7f7f9;
+        border-bottom: 1px solid #020202;
     }
     .content-1-a tbody tr {
         display: table-cell;
@@ -507,11 +507,11 @@
         background: transparent;
     }
     .content-1-a tr td:nth-child(odd) {
-        background: #F8F8F8;
-        border-right: 1px solid #E6E4E4;
+        background: #050505;
+        border-right: 1px solid #0e0e0e;
     }
     .content-1-a tr td:nth-child(even) {
-        border-right: 1px solid #E6E4E4;
+        border-right: 1px solid #000000;
     }
     .content-1-a tbody td {
         display: block;
