--- a/trang2/trang2.css
+++ b/trang2/trang2.css
@@ -94,16 +94,15 @@
     width: 95%;
     height: 2.5vh;
     border-radius: 1vh;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 6%;
+
 }
 .notice-0-2{
     border: 1px solid;
     background-color: darkblue;
-    width: 95%;
+    width: 90%;
     height: 0.1vh;
-    margin-right: auto;
-    margin-left: auto;
+    margin-left: 6%;
 }
 .notice-1{
     margin: 1vh 1vh 1vh 1vh;
